# novus-modbus

./: .gitignore  LICENSE  README.md  hacs.json  setup.cfg
custom_components/novus/: __init__.py  config_flow.py  const.py  hub.py  manifest.json  sensor.py
custom_components/novus_modbus/: __init__.py  config_flow.py  const.py  hub.py  manifest.json  sensor.py  strings.json
tests/: conftest.py  test_init.py
