[metadata]
name = my_custom_component
version = 0.4.0
description = Novus Automation Temperature Controller Modbus Integration
long_description = file: README.md
long_description_content_type = text/markdown
author = Ben LeMasurier
author_email = ben.lemasurier@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/benlemasurier/novus-modbus
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    homeassistant
    pymodbus>=3.2.0
    validators>=0.20.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    flake8
    pytest
    pytest-asyncio
    pytest-cov
    pytest-homeassistant-custom-component
    mypy

[flake8]
max-line-length = 88

[tool:pytest]
testpaths = tests
norecursedirs = .git
addopts =
    --strict
    --cov=custom_components
    --cov-report=term-missing

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
strict_equality = True
